<resources>
    <string name="app_name">ErasmusPlus</string>

    <string name="title_Cities_main">Cities</string>
    <string name="title_Cities_CardOne">Borgomanero</string>
    <string name="text_Cities_CardOne">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="title_Cities_CardTwo">Odry</string>
    <string name="text_Cities_CardTwo">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="title_Cities_CardThree">Bad Mergentheim</string>
    <string name="text_Cities_CardThree">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>


    <string name="title_Sights_main">Sights</string>
    <!--Bad Mergentheim-->
    <string name="title_Sights_cardOne">Schloss</string>
    <string name="title_Sights_cardTwo">Tierpark</string>
    <string name="title_Sights_cardThree">Zwillingshäuser</string>
    <string name="title_Sights_cardFour">Kurpark</string>

    <string name="category_Sights_One">Building</string>
    <string name="category_Sights_Two">Parks and Nature</string>

    <string name="category_Sights_Three"></string>
    <string name="category_SightsFour"></string>

    <string name="add_Title">Title</string>
    <string name="add_Category">Category</string>
    <string name="add_Location">Location</string>
    <string name="add_Description">Description</string>
    <string name="add_Button">ADD</string>


    <string name="requestSent">Request Sent!</string>
    <string name="requestSentText">Your Request is going to be checked and you will be informed.</string>
    <string name="gotIt">GOT IT</string>

    <string name="requestSentFailed">Failed to sent request!</string>
    <string name="requestSentFailedImage">Take a photo!</string>
    <string name="requestSentFailedTextTitle">Fill out the Title</string>
    <string name="requestSentFailedTextCategory">Fill out the Category</string>
    <string name="requestSentfailedTextLocation">Fill out the Location</string>
    <string name="requestSentfailedTextDescription">Fill out the Description</string>
    <string name="unexpectederror">Unexpected error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
