<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/firstcard"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:layout_marginBottom="20dp"
                android:background="@android:drawable/alert_light_frame">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/title_Cities_CardOne"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/category_Sights_Two"
                    android:maxWidth="375dp"
                    android:maxHeight="375dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/mgh" />

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="275dp"
                    android:text="@string/text_Cities_CardOne"
                    android:textColor="#424242"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/buttonfirstcard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.0" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/secondcard"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:layout_marginBottom="20dp"
                android:background="@android:drawable/alert_light_frame">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/title_Cities_CardTwo"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="Hello"
                    android:maxWidth="375dp"
                    android:maxHeight="375dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/mgh" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="275dp"
                    android:text="@string/text_Cities_CardTwo"
                    android:textColor="#424242"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/buttonsecondcard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.0" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/thirdcard"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:layout_marginBottom="20dp"
                android:background="@android:drawable/alert_light_frame">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/title_Cities_CardThree"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxWidth="375dp"
                    android:maxHeight="375dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/mgh" />

                <TextView
                    android:id="@+id/description3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="275dp"
                    android:text="@string/text_Cities_CardThree"
                    android:textColor="#424242"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/buttonthirdcard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.0" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>